# RGibbsTypePriors

./: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  cleanup  cleanup.win  configure  configure.ac  configure.ac.win  configure.win
R/: RGibbsTypePriors.R  gtpriors.R.in  gtpriors_mpfr.R
autom4te.cache/: output.0  requests  traces.0
man/: cnk_ngg.Rd  pkn_ngg.Rd  vnk_ngg.Rd
src/: Makevars  Makevars.win  config.h.in  gtpriors.c  gtpriors.h  gtpriorsapi.c  gtpriorsapi.h
tests/: testthat.R
